<resources>
    <string name="app_name">BestOffer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="user">User</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="password_required">Password Required</string>
    <string name="password">Password</string>
    <string name="passwords_not_matched">The password and password confirmation are not matched</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name_required">Name is Required</string>
    <string name="phone_required">Phone is Required</string>
    <string name="address_required">Address is Required</string>
    <string name="password_confirmation_required">Password confirmation is required</string>
    <string name="sign_up">Sign Up</string>
    <string name="creating_your_account">Creating your account…</string>
    <string name="log_in">Log In</string>
    <string name="login_loading_message">Login to your account, please wait…</string>
    <string name="company_products">Company Products</string>
    <string name="add_product">Add Product</string>
    <string name="category_name">Category Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="price_required">Price Required</string>
    <string name="productName_required">Product name is required</string>
    <string name="description_required">Description Required</string>
    <string name="categoryName_required">Category Name Required</string>
    <string name="uploading_data_message">Uploading product data…</string>
    <string name="cart">Cart</string>
    <string name="price_label">"Price -  "</string>
    <string name="the_seller_label">"Seller -  "</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="payment">Payment</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="please_wait">Please Wait…</string>
    <string name="done">Done</string>
    <string name="email">Email</string>
    <string name="product_price">"Product price :  "</string>
    <string name="favorites">Favorites</string>
    <string name="adding_to_favorite">Adding product to favorites</string>
    <string name="email_required">Email is Required</string>
    <string name="uploading_profile_data_message">Updating your data, please wait …</string>
</resources>
