<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/well12"
    android:fillViewport="true"
    tools:context=".SignUpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:animateLayoutChanges="true"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/deals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/userTypeToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_logo"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/typeUserBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:text="@string/user"
                android:textColor="@color/white"
                app:backgroundTint="@color/orange"
                app:cornerRadius="32dp"
                app:elevation="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/typeCompanyBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:text="@string/company"
                android:textColor="@color/white"
                app:backgroundTint="@color/gray"
                app:cornerRadius="32dp"
                app:elevation="8dp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/NameIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/orange"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/orange"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:hintTextAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userTypeToggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:textColorHint="@color/orange"
                tools:text="Test " />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/orange"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/orange"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:hintTextAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="@+id/NameIL"
            app:layout_constraintStart_toStartOf="@+id/NameIL"
            app:layout_constraintTop_toBottomOf="@+id/NameIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/orange"
                tools:text="01111111111" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PhoneIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/orange"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/orange"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:hintTextAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="@+id/NameIL"
            app:layout_constraintStart_toStartOf="@+id/NameIL"
            app:layout_constraintTop_toBottomOf="@+id/emailIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PhoneET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColorHint="@color/orange"
                tools:text="01111111111" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AddressIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/orange"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/orange"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:hintTextAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="@+id/NameIL"
            app:layout_constraintStart_toStartOf="@+id/NameIL"
            app:layout_constraintTop_toBottomOf="@+id/PhoneIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AddressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text"
                android:textColorHint="@color/orange"
                tools:text="address" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTI"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/orange"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/orange"
            app:endIconMode="password_toggle"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:hintTextAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="@+id/NameIL"
            app:layout_constraintStart_toStartOf="@+id/NameIL"
            app:layout_constraintTop_toBottomOf="@+id/AddressIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordTI"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/orange"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/orange"
            app:endIconMode="password_toggle"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:hintTextAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="@+id/NameIL"
            app:layout_constraintStart_toStartOf="@+id/NameIL"
            app:layout_constraintTop_toBottomOf="@+id/passwordTI">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/sign_up"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTI" />


        <View
            android:id="@+id/loadingViewBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loadingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_round_corner"
            android:elevation="18dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/loadingPb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="32dp"
                android:text="@string/creating_your_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loadingPb" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>