<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/add_product" />

        <ImageView
            android:id="@+id/backIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/productImageIv"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:background="@drawable/white_round_corner"
        android:elevation="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar" />

    <ImageView
        android:id="@+id/addProductImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:elevation="4dp"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        app:layout_constraintBottom_toBottomOf="@+id/productImageIv"
        app:layout_constraintEnd_toEndOf="@+id/productImageIv"
        app:layout_constraintStart_toStartOf="@+id/productImageIv"
        app:layout_constraintTop_toTopOf="@+id/productImageIv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryNameIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/orange"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextAppearance="?attr/textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="@+id/productImageIv"
        app:layout_constraintStart_toStartOf="@+id/productImageIv"
        app:layout_constraintTop_toBottomOf="@+id/productImageIv">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoryNameILET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_name"
            android:inputType="text"
            android:textColorHint="@color/orange"
            tools:text="Test " />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productNameIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/orange"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextAppearance="?attr/textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="@+id/categoryNameIL"
        app:layout_constraintStart_toStartOf="@+id/categoryNameIL"
        app:layout_constraintTop_toBottomOf="@+id/categoryNameIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:inputType="text"
            android:textColorHint="@color/orange"
            tools:text="01111111111" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/orange"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextAppearance="?attr/textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="@+id/categoryNameIL"
        app:layout_constraintStart_toStartOf="@+id/categoryNameIL"
        app:layout_constraintTop_toBottomOf="@+id/productNameIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_description"
            android:inputType="text"
            android:textColorHint="@color/orange"
            tools:text="address" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priceTI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textColorHint="@color/orange"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/orange"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextAppearance="?attr/textAppearanceBody2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/categoryNameIL"
        app:layout_constraintStart_toStartOf="@+id/categoryNameIL"
        app:layout_constraintTop_toBottomOf="@+id/descriptionIL"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/priceET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="number" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/save"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/priceTI"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/priceTI"
        app:layout_constraintTop_toBottomOf="@+id/priceTI" />




    <View
        android:id="@+id/loadingViewBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_background"
        android:visibility="gone"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_round_corner"
        android:elevation="18dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/loadingPb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:text="@string/uploading_data_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loadingPb" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>